--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT = 4000
 MONGO_URI = mongodb+srv://store:loc123@atlascluster.ycdqmv7.mongodb.net/film
+NAME_CLOUD = dzxupp48t
+PUBLIC_API_CLOUD = 681714798155661
+SECRET_API_CLOUD = u7927BMI-8Tx_GNvdE7MZCoKlsc
