--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.1",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -8,7 +10,9 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
+    "uuid": "^9.0.1"
   },
   "name": "hpltv-backend",
   "version": "1.0.0",
