--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "stripe": "^14.20.0",
     "uuid": "^9.0.1"
   },
   "name": "hpltv-backend",
