--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URI = mongodb+srv://store:loc123@atlascluster.ycdqmv7.mongodb.net/film
 NAME_CLOUD = dzxupp48t
 PUBLIC_API_CLOUD = 681714798155661
 SECRET_API_CLOUD = u7927BMI-8Tx_GNvdE7MZCoKlsc
+IMAGE_ID_DEFAULT =image-avatar/wxcqrfpkhef33f2rxlfp
+IMAGE_URL_DEFAULT =https://res.cloudinary.com/dzxupp48t/image/upload/v1711626829/image-avatar/wxcqrfpkhef33f2rxlfp.png
