--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "get-video-duration": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.2",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
