--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cloudinary": "^1.41.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
