--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.0.2",
+    "socket.io": "^4.7.5",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
   },
