--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "generate-password": "^1.7.1",
     "get-video-duration": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.0.2",
+    "password-validator": "^5.3.0",
     "socket.io": "^4.7.5",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
