--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.0.2",
     "password-validator": "^5.3.0",
+    "pdfkit": "^0.15.0",
     "socket.io": "^4.7.5",
     "stripe": "^14.20.0",
     "uuid": "^9.0.1"
